--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -121,10 +121,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		   <ul class="list-group listing">
 			  <li class="list-group-item active">  Расписание походов: </li>
 			  <li class="list-group-item"> 
-                            Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
+                            Карпаты с комфортом. Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
                             <span class="fa fa-calendar mr-2"></span>Дата: <span>12.02.2021 - 14.02.2021</span><br/> 
                             <span class="fa fa-tags mr-2"></span>Стоимость: <span>2000 Грн.</span><br/>
-                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span> - Дней</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
                           </li>
 			  <li class="list-group-item"> 
@@ -155,11 +155,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2-3 Дня</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>28 Км.</span>
                           </li>
-			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул  <br/> <span class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
-			  <li class="list-group-item">     Горы Улудаг, Мраморное море, Стамбул<br/> <span class="fa fa-calendar mr-2"></span> 05.06.2021 - 12.06.2021 </li>
-			  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул <br/> <span class="fa fa-calendar mr-2"></span> 17.09.2021 - 24.09.2021 </li>
-			  <li class="list-group-item">    Горы Улудаг, Мраморное море, Стамбул<br/> <span class="fa fa-calendar mr-2"></span> 09.10.2021 - 16.10.2021  </li>
-			  <li class="list-group-item">  Горы, озера Даламана и море  <br/>  <span class="fa fa-calendar mr-2"></span> 20.11.2021 - 27.11.2021 </li>
+			  <li class="list-group-item">
+                            Карпаты с комфортом. Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>06.03.2021 - 08.03.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>2000 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span> - Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                            Восхождение на зимнюю Говерлу <br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>06.03.2021 - 08.03.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                            Восхождение на зимний Петрос<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>20.03.2021 - 21.03.2021 </span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1200 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                            Двухдневный поход в Карпаты: хребет Чортка и Бухтивецкий водопад<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>20.03.2021 - 21.03.2021 </span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1200 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>20 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Восхождение на зимнюю Говерлу<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>26.03.2021 - 28.03.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span>
+                          </li>
 		    </ul>
                 </div>
               </div>
