--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -77,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <img src="images/karpati-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <h4 class="mb-3">
-              Походы в Карпаты с комфортом
+              Походы в Карпаты
             </h4>
             <p class="txt-alg-jf">
                Расписание походов в Карпаты
@@ -189,6 +189,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900 Грн.</span><br/>
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Гора Сывуля - 1836 м. <br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>02.04.2021 - 04.04.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1500 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>30 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Двухдневные походы в Карпаты: район Буковеля и Яремче<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>03.04.2021 - 04.04.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1200 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>15 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Двухдневные походы в Карпаты: район Буковеля и Яремче<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>17.04.2021 - 18.04.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1200 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>15 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Говерла и Петрос - сокровище Карпат <br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>17.04.2021 - 18.04.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1200/1500 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25-30 Км.</span>
                           </li>
 		    </ul>
                 </div>
