--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -218,6 +218,48 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>25-30 Км.</span>
                           </li>
+                          <li class="list-group-item">
+                             Говерла и Петрос и Черногора<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>01.05.2021 - 06.05.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>50-60 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Горганы с радиальными выходами<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>01.05.2021 - 06.05.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span> - Дней</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>80 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Гуцульские Альпы - массив Мармарош<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>14.05.2021 - 19.05.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>50-60 Км.</span>
+                          </li>
+                           <li class="list-group-item">
+                             Горганы 2021 Водопады<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>14.05.2021 - 19.05.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900/2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>60-65 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Говерла и Петрос - сокровище Карпат<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>21.05.2021 - 23.05.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1500 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25-30 Км.</span>
+                          </li>
+                          <li class="list-group-item">
+                             Говерла и Петрос и Черногора<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>21.05.2021 - 26.05.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900/2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>50-60 Км.</span>
+                          </li>
 		    </ul>
                 </div>
               </div>
