--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -126,21 +126,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-tags mr-2"></span>Стоимость: <span>2000 Грн.</span><br/>
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span> - Дней</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span><br/>
-                            <span  class="fa fa-money"></span> Оплатить: <span><a href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyDQsiDQmtCw0YDQv9Cw0YLRiyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=&signature=qseCAIjCVDSEaoX7e62yJSf3hSY=">пройдите по ссылке для оплаты</a></span>
+                            <span  class="fa fa-money"></span> Оплатить: <span><a href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyDQsiDQmtCw0YDQv9Cw0YLRiyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=&signature=qseCAIjCVDSEaoX7e62yJSf3hSY=">Здесь</a></span>
                           </li>
 			  <li class="list-group-item"> 
                             Восхождение на зимнюю Говерлу<br/> 
                             <span class="fa fa-calendar mr-2"></span>Дата: <span>13.02.2021 - 15.02.2021</span><br/> 
                             <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900 Грн.</span><br/>
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
-                            <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>35 Км.</span><br/>
+                            <span  class="fa fa-money"></span> Оплатить: <span><a href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyDQsiDQmtCw0YDQv9Cw0YLRiyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=&signature=qseCAIjCVDSEaoX7e62yJSf3hSY=">Здесь</a></span>
                           </li>
 			  <li class="list-group-item"> 
                              Легендарный Поп Иван<br/> 
                             <span class="fa fa-calendar mr-2"></span>Дата: <span>13.02.2021 - 15.02.2021</span><br/> 
                             <span class="fa fa-tags mr-2"></span>Стоимость: <span>1500 Грн.</span><br/>
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
-                            <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span><br/>
+                            <span  class="fa fa-money"></span> Оплатить: <span><a href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyDQsiDQmtCw0YDQv9Cw0YLRiyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=&signature=qseCAIjCVDSEaoX7e62yJSf3hSY=">Здесь</a></span>
                           </li>
 			  <li class="list-group-item">
                             Горганы 2021: горы Хомяк и Сыняк<br/> 
