--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -291,6 +291,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br/>
                             <span class="fa fa-map-o"></span> Расстояние: <span>25-30 Км.</span>
                           </li>
+                          <li class="list-group-item"> 
+                             Говерла, Петрос и Черногора<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>11.06.2021 - 16.06.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900/2400 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span> 6 Дней</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>50-60 Км.</span><br/>
+                            <span  class="fa fa-money"></span> Оплатить: <span><a href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyDQsiDQmtCw0YDQv9Cw0YLRiyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=&signature=qseCAIjCVDSEaoX7e62yJSf3hSY=">Здесь</a></span>
+                          </li>
+                          <li class="list-group-item"> 
+                             Говерла и Петрос - сокровище Карпат<br/> 
+                            <span class="fa fa-calendar mr-2"></span>Дата: <span>25.06.2021 - 27.06.2021</span><br/> 
+                            <span class="fa fa-tags mr-2"></span>Стоимость: <span>1500 Грн.</span><br/>
+                            <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span> 3 Дня</span><br/>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>25-30 Км.</span><br/>
+                            <span  class="fa fa-money"></span> Оплатить: <span><a href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyDQsiDQmtCw0YDQv9Cw0YLRiyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=&signature=qseCAIjCVDSEaoX7e62yJSf3hSY=">Здесь</a></span>
+                          </li>
 		    </ul>
                 </div>
               </div>
