--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -308,7 +308,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="fa fa-calendar mr-2"></span>Дата: <span>04.06.2021 - 09.06.2021</span><br/> 
                             <span class="fa fa-tags mr-2"></span>Стоимость: <span>1900/2400 Грн.</span><br/>
                             <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span><br/>
-                            <span class="fa fa-map-o"></span> Расстояние: <span>60-65 Км.</span>
+                            <span class="fa fa-map-o"></span> Расстояние: <span>60-65 Км.</span><br/>
+                            <span  class="fa fa-money"></span> Оплатить: <span><a href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyDQsiDQmtCw0YDQv9Cw0YLRiyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=&signature=qseCAIjCVDSEaoX7e62yJSf3hSY=">LiqPay</a></span>
                           </li>
                           <li class="list-group-item">
                              Поход для новичков и детей по Карпатам 2021: водопады и монастырь <br/> 
