--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="fa fa-map-signs"></span>
 					</div>
 					<h4>ВЫБЕРИТЕ ПУНКТ НАЗНАЧЕНИЯ</h4>
-					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
+					<p class="mt-3"></p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6 mt-sm-0 mt-5">
@@ -217,7 +217,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="fa fa-calendar"></span>
 					</div>
 					<h4> ВЫБЕРИТЕ ДАТУ </h4>
-					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
+					<p class="mt-3"></p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6 mt-lg-0 mt-5">
@@ -226,7 +226,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="fa fa-gift"></i>
 					</div>
 					<h4>НАСЛАЖДАЙТЕСЬ ПОЕЗДКОЙ</h4>
-					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
+					<p class="mt-3"></p>
 				</div>
 			</div>
 		</div>
