--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h4>У Вас Есть Вопросы О Нас? Напишите Нам.</h4>
 						<p class="mt-md-4 mt-2">
                                                  Ваше обращение будет принято, обработано и в течении
-                                                  10 дней ожидайте обратной связи.
+                                                  3 (трёх) дней ожидайте обратной связи.
                                                 </p>
 						<h5 class="mt-lg-5 mt-3">Рабочие часы</h5>
 						<p class="mt-3">С понедельника по пятницу: с 09:00 до 18:00.</p>
