--- a/about.html
+++ b/about.html
@@ -135,21 +135,21 @@
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
 									<h4 class="mt-md-4 mt-2">Зимние Туры</h4>
-									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
+									<p class="mt-3"></p>
 								</div>
 							</div>
 							<div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
 									<h4 class="mt-md-4 mt-2">Размещение</h4>
-									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
+									<p class="mt-3"></p>
 								</div>
 							</div>
 							<div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
 									<h4 class="mt-md-4 mt-2">Низкие Цены</h4>
-									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
+									<p class="mt-3"></p>
 								</div>
 							</div>
 						</div>
@@ -159,22 +159,22 @@
 							<div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
-									<h4 class="mt-md-4 mt-2">Less Crowd</h4>
-									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
+									<h4 class="mt-md-4 mt-2">Небольшие Группы</h4>
+									<p class="mt-3"></p>
 								</div>
 							</div>
 							<div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
-									<h4 class="mt-md-4 mt-2">Exp Agents</h4>
-									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
+									<h4 class="mt-md-4 mt-2">Сопровождение Агентом</h4>
+									<p class="mt-3"></p>
 								</div>
 							</div>
 							<div class="col-lg-4 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
-									<h4 class="mt-md-4 mt-2">Easy Trip</h4>
-									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
+									<h4 class="mt-md-4 mt-2">Лёгкая Поездка</h4>
+									<p class="mt-3"></p>
 								</div>
 							</div>
 						</div>
