--- a/booking.html
+++ b/booking.html
@@ -115,6 +115,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<option>ЛОЛ</option>
 								<option>Турция</option>
 								<option>Хортица</option>
+                                                                <option>Карпаты</option>
 							</select>
 						</div>
 						<div class="col-md-12 form-group contact-forms">
@@ -196,6 +197,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
 						<li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
 						<li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a></li>
+                                                <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a></li>
 					</ul>
 					<ul class="col-6 links">
 						<li><a href="https://novi-povorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
