--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </p>
 			</div>
 			<div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
-				<img src="images/about.jpg" alt="" class="img-fluid abt-image" />
+				<!--<img src="images/about.jpg" alt="" class="img-fluid abt-image" />-->
+                                <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
 			</div>
 		</div>
 		<div class="row mt-5 text-center">
