--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                                 </p>
 			</div>
 			<div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
-				<img src="images/about.jpg" alt="" class="img-fluid abt-image" />
+				<img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
 			</div>
 		</div>
 	<!--
