--- a/packages.html
+++ b/packages.html
@@ -248,7 +248,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<!--  //Карпаты  -->
 
-				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  8 марта  -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-LOL.html">
@@ -269,7 +269,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					</div>
 				</div>
-				<!--  //ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  //8 марта  -->
 
 
 			</div>
