--- a/packages.html
+++ b/packages.html
@@ -228,15 +228,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--  Карпаты -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
-						<a href="https://novi-povorot.pp.ua/page-Karpati.html">
-							<img src="images/karpati-mini.jpg" alt="LOL" class="img-fluid" />
+						<a href="https://novi-povorot.pp.ua/page-eight-march.html">
+							<img src="images/hortica-mini.jpg" alt="LOL" class="img-fluid" />
 						</a>
 						<p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
 					</div>
 					<div class="package-info">
 						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты, Украина.</h6>
 						<h5 class="my-2">
-							<a href="https://novi-povorot.pp.ua/page-Karpati.html">
+							<a href="https://novi-povorot.pp.ua/page-eight-march.html">
 								Карпаты
 							</a>
 						</h5>
@@ -248,7 +248,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<!--  //Карпаты  -->
 
-				<!--  8 марта  -->
+				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-LOL.html">
@@ -269,7 +269,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					</div>
 				</div>
-				<!--  //8 марта  -->
+				<!--  //ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
 
 
 			</div>
