--- a/packages.html
+++ b/packages.html
@@ -251,19 +251,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
-						<a href="https://novi-povorot.pp.ua/page-LOL.html">
-							<img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
+						<a href="https://novi-povorot.pp.ua/page-eight-march.html">
+							<img src="images/eight-march-mini.jpg" alt="LOL" class="img-fluid" />
 						</a>
-						<p><span class="fa fa-tags"></span> <span>170грн.</span></p>
+						<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
 					</div>
 					<div class="package-info">
 						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
 						<h5 class="my-2">
-							<a href="https://novi-povorot.pp.ua/page-LOL.html">
-								Лол
+							<a href="https://novi-povorot.pp.ua/page-eight-march.html">
+							 8 марта
 							</a>
 						</h5>
-						<p class="">Праздник в стиле Лол!</p>
+						<p class="">Праздник в марта</p>
 						<ul class="listing mt-3">
 							<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
 						</ul>
