--- a/packages.html
+++ b/packages.html
@@ -260,10 +260,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
 						<h5 class="my-2">
 							<a href="https://novi-povorot.pp.ua/page-eight-march.html">
-							 8 марта
+							 Букет к 8 марта
 							</a>
 						</h5>
-						<p class="">Праздник в марта</p>
+						<p class="">Букет к 8 марта</p>
 						<ul class="listing mt-3">
 							<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
 						</ul>
