--- a/packages.html
+++ b/packages.html
@@ -248,7 +248,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<!--  //Карпаты  -->
 
-				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  8 марта  -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-eight-march.html">
@@ -263,13 +263,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							 Букет к 8 марта
 							</a>
 						</h5>
-						<p class="">Букет к 8 марта</p>
+						<p class="">Оригинальный подарок своими руками к 8 марта!</p>
 						<ul class="listing mt-3">
 							<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
 						</ul>
 					</div>
 				</div>
-				<!--  //ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  //8 марта  -->
 
 
 			</div>
