--- a/booking.html
+++ b/booking.html
@@ -116,6 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<option>Турция</option>
 								<option>Хортица</option>
                                                                 <option>Карпаты</option>
+                                                                <option>Букет К 8 Марта</option>
 							</select>
 						</div>
 						<div class="col-md-12 form-group contact-forms">
