--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -6,8 +6,7 @@
     <title>Хортица | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Grand Tour Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
 
     <script>
         addEventListener("load", function () {
