--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -48,7 +48,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <ul class="menu ml-auto mt-1">
 				<li class=""><a href="index.html">Главная</a></li>
 				<li class=""><a href="about.html"> О Нас </a></li>
-				<!--<li class=""><a href="services.html">Сервисы</a></li>-->
 				<li class=""><a href="packages.html">Туры</a></li>
 				<li class=""><a href="contact.html">Контакты</a></li>
 				<li class="booking"><a href="booking.html">Забронировать</a></li>
@@ -65,7 +64,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 <!-- //banner -->
-	
 
 <!--single page-->
   <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
@@ -94,8 +92,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <hr>
             <ul class="listing">
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>1700 Грн.</span></li> 
-	   <!-- </ul>
-             <ul class="listing">-->
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
 	     </ul>
             <br>
@@ -116,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    background: rgba(122,183,43,1) !important;"onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
 	    <img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
 	      style="margin-right: 7px !important; vertical-align: middle !important;"/>
-	    <span style="vertical-align:middle; !important">Оплатить</span>
+	    <span style="vertical-align:middle;">Оплатить</span>
 	  </button>
 	</form>
 	<!-- liq pay -->  
@@ -142,7 +138,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </ul>
            
            </p>
-<!------------$$$$$$----------->
+<!-- Описание экскурсии -->
 
 <div class="accordion mt-3 mb-3" id="accordionExample">
   <div class="card">
@@ -215,10 +211,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 
-<!---------$$$$$$$--------->
-
-
-
+<!-- Описание экскурсии -->
 
 <div class="alert alert-success">
 <h5 class="alert-heading">В стоимость входит:</h5>
@@ -263,6 +256,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </section>
   <!--//single page-->
+
           <!-- liq pay -->
      <div id="liqpay_checkout"></div>
 <script>
@@ -285,11 +279,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="//static.liqpay.ua/libjs/checkout.js" async></script>
     
   <!-- liq pay -->  
-<!-- 
-	**********************************
-	             Футер
-	**********************************
- -->
 
 	<!--footer -->
 	<footer>
@@ -395,7 +384,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</a>
 </div>
 <!-- move top -->
-<!--<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet"/>-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
