--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -163,6 +163,8 @@
                         </ul>
                         </p>
 
+                        </div>
+                        <div class="col-lg-12 blog-left-sub">
                         <!-- Описание экскурсии -->
 
                         <div class="accordion mt-3 mb-3" id="accordionExample">
@@ -237,6 +239,7 @@
                                 </li>
                                 <ul>
                         </div>
+                       <div id="liqpay_checkout"></div>
                     </div>
                 </div>
             </div>
@@ -247,7 +250,7 @@
     <!--//single page-->
 
     <!-- liq pay -->
-    <div id="liqpay_checkout"></div>
+    
     <script>
         window.LiqPayCheckoutCallback = function () {
             LiqPayCheckout.init({
