--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -89,7 +89,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            Букет к 8 марта
+                            Сладкий букет к 8 марта
                         </h4>
                         <p class="txt-alg-jf">
                             Оригинальный подарок своими руками к 8 марта!
