--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -33,6 +33,7 @@
     <link
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
     <!-- //google fonts -->
 
 </head>
