--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="images/novipovorot.jpg" alt="" class="img-fluid abt-image" />
                 </div>
             </div>
 
@@ -234,18 +234,18 @@
                         </div>
                         <div class="row">
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
                                 </li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
                                 <li><a href="https://novi-povorot.pp.ua/page-Limonariy.html"
                                         class="scroll">Лимонарий</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
+                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
                             </ul>
                         </div>
