--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <!--  Пиво -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                        <a href="https://novipovorot.pp.ua/page-Beer.html">
                             <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
@@ -262,7 +262,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                            <a href="https://novipovorot.pp.ua/page-Beer.html">
                                 Натуральное пиво
                             </a>
                         </h5>
@@ -279,7 +279,7 @@
                 <!--  Турция -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Turkey.html">
+                        <a href="https://novipovorot.pp.ua/page-Turkey.html">
                             <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>190$</span></p>
@@ -287,7 +287,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
+                            <a href="https://novipovorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
                         </h5>
                         <p class="">Расписание походов по Турции...</p>
                         <ul class="listing mt-3">
@@ -300,14 +300,14 @@
                 <!--  Полтава  -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Poltava.html">
+                        <a href="https://novipovorot.pp.ua/page-Poltava.html">
                             <img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>1700грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
-                        <h5 class="my-2"><a href="https://novi-povorot.pp.ua/page-Poltava.html">Полтава</a></h5>
+                        <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Poltava.html">Полтава</a></h5>
                         <p class="">Лыжные покатухи и колоритный хутор с Новым поворотом </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
@@ -319,7 +319,7 @@
                 <!--  Лимонарий  -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>230грн.</span></p>
@@ -327,7 +327,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                            <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                                 Лимонарий
                             </a>
                         </h5>
@@ -375,7 +375,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="Лимонарий">
                         </a>
                         <div class="rating">
@@ -398,7 +398,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3">Полтава</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Poltava.html">
+                        <a href="https://novipovorot.pp.ua/page-Poltava.html">
                             <img src="images/Poltava-max.jpg" class="img-fluid" alt="Полтава">
                         </a>
                         <div class="rating">
@@ -421,7 +421,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
                     <h4 class="destination mb-3">Пиво</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                        <a href="https://novipovorot.pp.ua/page-Beer.html">
                             <img src="images/beer-max.jpg" class="img-fluid" alt="">
                         </a>
                         <div class="rating">
@@ -444,7 +444,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
                     <h4 class="destination mb-3">Турция</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Turkey.html">
+                        <a href="https://novipovorot.pp.ua/page-Turkey.html">
                             <img src="images/Turkey-max.jpg" class="img-fluid" alt="">
                         </a>
                         <div class="rating">
@@ -526,18 +526,18 @@
                         </div>
                         <div class="row">
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
                                 </li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Limonariy.html"
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
                                         class="scroll">Лимонарий</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
+                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
                             </ul>
                         </div>
