--- a/404.html
+++ b/404.html
@@ -175,11 +175,11 @@ p a:hover{
 <div class="wrap">
     <div class="logo">
         <img src="./images/404.png" alt="404"  />
-        <p><a href="https://novi-povorot.pp.ua">Вперед на страницу туров выходного дня "Новый Поворот"</a></p>
+        <p><a href="https://novipovorot.pp.ua">Вперед на страницу туров выходного дня "Новый Поворот"</a></p>
     </div>
 </div>
 <div class="footer">
-	&copy 2021 - 404  | &nbsp; <a href="https://novi-povorot.pp.ua">Новый Поворот</a>
+	&copy 2021 - 404  | &nbsp; <a href="https://novipovorot.pp.ua">Новый Поворот</a>
 </div>
 
 </body>
