--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -125,7 +125,7 @@
                             Бронирование билетов осуществляется заранеe: </p>
                         <div class="page-booking-btn ml-1 mt-1 mb-1 row">
                             <button type="button" class="btn btn-outline-primary mr-3"> <a
-                                    href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
+                                    href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
 
                             <!-- liq pay -->
                             <form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
@@ -344,18 +344,18 @@
                         </div>
                         <div class="row">
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
                                 </li>
                                 <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Limonariy.html"
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
                                         class="scroll">Лимонарий</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
+                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
                             </ul>
                         </div>
