--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -5,8 +5,7 @@
 <title>Полтава | Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
-<meta name="keywords" content="Grand Tour Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
 
     <script>
         addEventListener("load", function () {
@@ -101,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <p>
              Бронирование билетов осуществляется заранеe: </p>
           <div class="page-booking-btn ml-1 mt-1 mb-1 row">
-              <button type="button" class="btn btn-outline-primary mr-3"> <a href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
+              <button type="button" class="btn btn-outline-primary mr-3"> <a href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
 		  
 		<!-- liq pay -->
 	<form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
@@ -336,15 +335,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="row">
 					<ul class="col-6 links">
-						<li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-						<li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-						<li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a></li>
-                                                <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a></li>
+						<li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+						<li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+						<li><a href="https://novipovorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a></li>
+                                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a></li>
 					</ul>
 					<ul class="col-6 links">
-						<li><a href="https://novi-povorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
-						<li><a href="https://novi-povorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-						<li><a href="https://novi-povorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a></li>
+						<li><a href="https://novipovorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
+						<li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+						<li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a></li>
 					</ul>
 				</div>
 					</div>
